--- a/src/main/java/edu/ucsd/properties/PropertiesForm.form
+++ b/src/main/java/edu/ucsd/properties/PropertiesForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="edu.ucsd.properties.PropertiesForm">
-  <grid id="27dc6" binding="panel" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="10" bottom="0" right="10"/>
     <constraints>
       <xy x="20" y="264" width="500" height="289"/>
@@ -8,37 +8,37 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="ce28c" class="javax.swing.JLabel" binding="gettyPathLabel">
+      <component id="5a995" class="javax.swing.JCheckBox" binding="debugLogCheckBox" default-binding="true">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Absolute path to Getty csi executable"/>
+          <text value="Debug Log"/>
         </properties>
       </component>
-      <component id="799b3" class="javax.swing.JTextField" binding="gettyPathField">
+      <component id="a28ba" class="javax.swing.JCheckBox" binding="stackTraceCheckBox" default-binding="true">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <text value="Stack Trace"/>
+        </properties>
       </component>
-      <component id="5a996" class="javax.swing.JLabel" binding="pythonPathLabel">
+      <component id="2aadd" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Absolute path to python 2.7"/>
+          <text value="Enable debugging of Gradle plugin: "/>
         </properties>
       </component>
-      <component id="509c7" class="javax.swing.JTextField" binding="pythonPathField">
+      <component id="330be" class="javax.swing.JCheckBox" binding="cleanBeforeRunningCheckBox" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <text value="Clean Before Running"/>
+        </properties>
       </component>
     </children>
   </grid>
