--- a/src/main/java/edu/ucsd/properties/PropertiesForm.form
+++ b/src/main/java/edu/ucsd/properties/PropertiesForm.form
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="edu.ucsd.properties.PropertiesForm">
-  <grid id="27dc6" binding="panel" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" default-binding="true" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="10" bottom="0" right="10"/>
     <constraints>
-      <xy x="20" y="264" width="500" height="289"/>
+      <xy x="20" y="264" width="563" height="302"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="5a995" class="javax.swing.JCheckBox" binding="debugLogCheckBox" default-binding="true">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Debug Log"/>
@@ -18,10 +18,26 @@
       </component>
       <component id="a28ba" class="javax.swing.JCheckBox" binding="stackTraceCheckBox" default-binding="true">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Stack Trace"/>
+        </properties>
+      </component>
+      <component id="330be" class="javax.swing.JCheckBox" binding="cleanBeforeRunningCheckBox" default-binding="true">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Clean Before Running"/>
+        </properties>
+      </component>
+      <component id="5344a" class="javax.swing.JCheckBox" binding="removeWorkBeforeRunningCheckBox">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Remove Work Directory"/>
         </properties>
       </component>
       <component id="2aadd" class="javax.swing.JLabel">
@@ -32,12 +48,12 @@
           <text value="Enable debugging of Gradle plugin: "/>
         </properties>
       </component>
-      <component id="330be" class="javax.swing.JCheckBox" binding="cleanBeforeRunningCheckBox" default-binding="true">
+      <component id="4dd87" class="javax.swing.JCheckBox" binding="doNotAutoRunCheckBox">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Clean Before Running"/>
+          <text value="Do Not Autorun Inference"/>
         </properties>
       </component>
     </children>
